--- a/promptflow/web-classification/run_evaluation.yml
+++ b/promptflow/web-classification/run_evaluation.yml
@@ -7,12 +7,12 @@ column_mapping:
   prediction: ${run.outputs.category}
 
 # define cloud resource
-runtime: automatic
+runtime: meisharuntime
 
 connections:
   classify_with_llm:
-    connection: Default_AzureOpenAI
-    deployment_name: gpt-35-turbo-0301
+    connection: open_ai_connection
+    deployment_name: gpt-35-turbo
   summarize_text_content:
-    connection: Default_AzureOpenAI
-    deployment_name: gpt-35-turbo-0301
+    connection: open_ai_connection
+    deployment_name: gpt-35-turbo
