Update prompt flow runtime

--- a/promptflow/web-classification/run_evaluation.yml
+++ b/promptflow/web-classification/run_evaluation.yml
@@ -7,7 +7,7 @@ column_mapping:
   prediction: ${run.outputs.category}
 
 # define cloud resource
-runtime: meisharuntime
+runtime: llmopsruntime
 
 connections:
   classify_with_llm:
