--- a/promptflow/web-classification/run.yml
+++ b/promptflow/web-classification/run.yml
@@ -3,7 +3,7 @@ flow: .
 data: data.jsonl
 
 # define cloud resource
-runtime: meisharuntime
+runtime: llmopsruntime
 
 connections:
   classify_with_llm:
