Remove runtime to see if it will create it on the fly

--- a/promptflow/web-classification/run.yml
+++ b/promptflow/web-classification/run.yml
@@ -3,7 +3,7 @@ flow: .
 data: data.jsonl
 
 # define cloud resource
-runtime: llmopsruntime
+# runtime: llmopsruntime
 
 connections:
   classify_with_llm:
