--- a/promptflow/web-classification/run_evaluation.yml
+++ b/promptflow/web-classification/run_evaluation.yml
@@ -6,8 +6,8 @@ column_mapping:
   groundtruth: ${data.answer}
   prediction: ${run.outputs.category}
 
-# define cloud resource
-runtime: llmopsruntime
+# # define cloud resource
+# runtime: llmopsruntime
 
 connections:
   classify_with_llm:
